--- a/mystyle.css
+++ b/mystyle.css
@@ -9,3 +9,8 @@ a {
 padding: 20px;
 background-color: hotpink;
 }
+div {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-style: solid;
+}
